--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -582,8 +582,8 @@ blockquote {
 }
 
 code {
-  font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  font-size: 13px;
+  font-family: monospace;
+  font-size: 12px;
   color: #efefef;
   text-shadow: 0px 1px 0px #000;
   margin: 0 4px;
